--- a/ProjectUmico.Web/Views/Categories/Index.cshtml
+++ b/ProjectUmico.Web/Views/Categories/Index.cshtml
@@ -6,11 +6,13 @@
 }
 
 <div class="container">
-    @using (Html.BeginForm("Add", "Categories", "POST"))
+    @using (Html.BeginForm("Add", "Categories", "",FormMethod.Post))
     {
+        <label asp-for="CategoryName"></label>
         <input class="form-control" asp-for="CategoryName" />
+        <label asp-for="CategoryParentName"></label>
         <input class="form-control" asp-for="CategoryParentName" />
-        <button class="bg-primary" type="submit">Add</button>
+        <button class="m-3 bg-primary" type="submit">Add</button>
     }
 
     <div class="row">
@@ -25,9 +27,9 @@
         </div>
     </div>
 
-    @if (@Model != null && Model.Categories.Count > 0)
+    @if (@Model != null && Model.Categories.Items.Count > 0)
     {
-        @foreach (var category in @Model.Categories)
+        @foreach (var category in @Model.Categories.Items)
         {
             <div class="row">
                 <div class="col">
